✨ Add task queue info endpoint
